# whir-p3

./: .gitignore  Cargo.toml
src/: commit.rs  config.rs  dft.rs  lib.rs  merkle.rs  non_overlapping_parallelism.rs  open.rs  sumcheck.rs  utils.rs  verify.rs  wrappers.rs
src/fiat_shamir/: domain_separator.rs  mod.rs  prover.rs  sho.rs  test.rs  utils.rs  verifier.rs
src/parameters/: mod.rs
src/poly/: dense.rs  evals.rs  fold.rs  mod.rs  multilinear.rs
src/sumcheck/: mod.rs  sumcheck_polynomial.rs  sumcheck_single.rs  sumcheck_single_skip.rs  utils.rs
src/whir/: config.rs  mod.rs  parameters.rs  utils.rs
src/whir/committer/: mod.rs  reader.rs  writer.rs
src/whir/pcs/: whir.rs
src/whir/prover/: mod.rs  round.rs
src/whir/statement/: constraint.rs  mod.rs  weights.rs
src/whir/verifier/: mod.rs  sumcheck.rs
